# biyaheMAIN

./: .dockerignore  .firebaserc  .gitignore  DELIVERABLES.md  Dockerfile  README.html  README.md  SYSTEM_FORMULAS.md  firebase.json  fix_path.ps1  index.html
Soroban/contracts/contribution/: Cargo.toml
Soroban/contracts/notes/: Cargo.toml
Soroban/contracts/notes/src/: lib.rs  test.rs
backend/: DOCUMENTATION.MD  check_balance.js  farm_friendbot.js  farm_v2.js  firebase.json  firestore.rules  generate_key.js  get_admin_address.js  list_models.js  next.config.ts  package-lock.json  package.json  temp_stellar_key.json  test_bridge.js  test_direct.js  test_ffi.js  test_firebase_key.js  test_gemini.js  test_gemini_openai.js  test_simple.js  test_verify.js
backend/src/app/: globals.css  google-services.json  layout.tsx  page.tsx
backend/src/app/admin/: page.tsx
backend/src/lib/: ai-analyzer.ts  core-bridge.ts  firebase.ts  google-maps.ts  pathfinder.ts  reputation.ts  stellar.ts
core/: CMakeLists.txt
core/include/: mcraptor.hpp  transit_graph.hpp
core/src/: ffi_bridge.cpp  test_runner.cpp
core/src/algorithms/: mcraptor.cpp  transit_graph.cpp  ultra.cpp
core/src/consensus/: consensus.cpp
core/src/fare/: fare_matrix.cpp
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/lib/: main.dart
frontend/lib/models/: route.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
scripts/: app.js  eta-engine.js  fare-calculator.js  map-engine.js  mcraptor.js  transit-graph.js
styles/: main.css
(+36 files in other folders)
